fix: sync database migration with entity and satisfy sonar cloud